--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start:dev": "node -r dotenv/config dist/app.js",
+    "start:watch": "nodemon -r dotenv/config src/app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +17,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "ssh2": "^1.7.0"
   }
 }
