Dockerization Second Attempt

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,12 @@ WORKDIR /app
 
 COPY package.json .
 COPY package-lock.json .
-RUN npm install
+RUN apk add --no-cache --virtual .gyp \
+    python \
+    make \
+    g++ \
+    && npm install \
+    && apk del .gyp
 
 COPY . .
 
