--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,12 +3,7 @@ WORKDIR /app
 
 COPY package.json .
 COPY package-lock.json .
-RUN apk add --no-cache --virtual .gyp \
-    python \
-    make \
-    g++ \
-    && npm install \
-    && apk del .gyp
+RUN npm install
 
 COPY . .
 
